--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,12 @@ sudo: false
 
 matrix:
   include:
-    - go: "1.9"
-    - go: "1.10"
-    - go: "tip"
+    - go: "1.9.x"
+    - go: "1.10.x"
+    - go: "1.11.x"
+
+env:
+  - GO111MODULE=on
 
 script:
   - go test -race ./...
